<resources>
    <string name="app_name">To-let</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">To-let</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="facebook_app_id">299927987487505</string>


    <string name="option1">Mess</string>
    <string name="option2">Hostel</string>
    <string name="option3">Flat</string>
    <string name="option4">Sub-let</string>
    <string name="your_post">Your Post</string>
    <string name="add_post">Add Post</string>
    <string name="communicate">Communicate</string>
    <string name="to_let">To-Let</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="todo">TODO</string>

    <string name="enter_your_phone_number">enter your Phone Number</string>
    <string name="enter_your_location">enter your Location</string>
    <string name="enter_your_name">enter your name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">Name :</string>
    <string name="phone_number">Phone Number:</string>
    <string name="enter_the_name">enter the name</string>
    <string name="enter_the_phone_number">enter the phone number</string>
    <string name="enter_the_address">enter the address</string>
    <string name="mess_rent">Mess rent</string>
    <string name="room_for">Room For</string>
    <string name="enter_location">Enter Location</string>
    <string name="description">Description</string>
    <string name="submit_post">Submit Post</string>
    <string name="select_month">Select Month</string>

    <string-array name="selectMonth">

        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>

    </string-array>

    <string-array name="roomFor">

        <item>Male</item>
        <item>Female</item>
        <item>Family</item>

    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register?</string>
    <string name="login_msg">Already have one? Login?</string>
    <string name="password">Password</string>
    <string name="user_type">User Type</string>
    <string name="hostel_rent">Hostel Rent</string>

    <string-array name="userType">
        <item>Renter</item>
        <item>Owner</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>
