<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rit.basa_bari.post_activity.AdsMessPostActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridView
            android:id="@+id/gv"
            android:layout_width="match_parent"
            android:layout_height="382dp"
            android:layout_weight="1"
            android:numColumns="2">

        </GridView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn"
            android:text="Open Gallery"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:text="@string/select_month"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/hmonthSpinnerID"
                android:layout_marginTop="5dp"
                android:entries="@array/selectMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:text="@string/room_for"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/hgenderSpinnerID"
                android:layout_marginTop="5dp"
                android:entries="@array/roomFor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/hostelRentET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:hint="@string/hostel_rent"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/hostelphoneET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:inputType="phone"
            android:layout_weight=".5"
            android:textSize="20sp"
            android:gravity="center"
            android:hint="@string/enter_the_phone_number"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/hostellocationET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="text"
            android:layout_weight=".5"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:hint="@string/enter_location"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/hosteldescriptionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="text"
            android:layout_weight=".5"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:hint="@string/description"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/hostelsubmitBTN"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:text="@string/submit_post"/>
</LinearLayout>
</ScrollView>
