<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rit.basa_bari.fragments.AddPostFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:padding="10dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:background="@drawable/cardview">


        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/messLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="true"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="#fcfcfc"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/messId"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@color/black"
                        android:contentDescription="@string/todo"
                        android:padding="10dp"
                        android:src="@drawable/mess_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/option1"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="true"

                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/hostelLinearLayout"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="#fcfcfc"
                    android:layout_marginLeft="50dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/hostelId"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@color/black"
                        android:contentDescription="@string/todo"
                        android:padding="10dp"
                        android:src="@drawable/hostel_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/option2"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="true"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/flatLinearLayout"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="#fcfcfc"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/flatId"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@color/black"
                        android:contentDescription="@string/todo"
                        android:padding="10dp"
                        android:src="@drawable/flat_icon" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/option3"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textStyle="bold" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="true"

                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/sub-letLinearLayout"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="#fcfcfc"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/subletId"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@color/black"
                        android:contentDescription="@string/todo"
                        android:padding="10dp"
                        android:src="@drawable/sublet_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/option4"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </FrameLayout>


</LinearLayout>




