<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rit.basa_bari.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <FrameLayout
        android:id="@+id/framlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clipToPadding="true"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/messCardViewId"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <RelativeLayout
                        android:id="@+id/messlayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/spu"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_below="@+id/messlayout"
                            android:id="@+id/messImage"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@color/black"
                            android:padding="10dp"
                            android:src="@drawable/mess_icon"
                            tools:ignore="NotSibling" />

                        <TextView
                            android:layout_below="@+id/messImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/option1"
                            android:textColor="@android:color/white"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textStyle="bold" />


                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/hostelCardViewId"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:id="@+id/hostellayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/log1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/hostelImage"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@color/black"
                            android:padding="10dp"
                            android:src="@drawable/hostel_icon" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/option2"
                            android:textColor="@android:color/white"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textStyle="bold" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clipToPadding="true"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/flatCardViewId"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:id="@+id/flatlayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/log"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/flatImage"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@color/black"
                            android:padding="10dp"
                            android:src="@drawable/flat_icon" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/option3"
                            android:textColor="@android:color/white"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textStyle="bold" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/subletCardViewId"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:id="@+id/subletlayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/sublets_image"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/subletImage"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@color/black"
                            android:padding="10dp"
                            android:src="@drawable/sublet_icon" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/option4"
                            android:textColor="@android:color/white"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textStyle="bold" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>


            </LinearLayout>


        </LinearLayout>

    </FrameLayout>


</android.support.constraint.ConstraintLayout>